added an animated cube

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -70,12 +70,16 @@
 
   <!-- Middle Column (Single Row) -->
   <div class="column middle-column">
-    <div class="row">
+    <div class="top-row">
       <mat-form-field appearance="outline" class="full-width">
         <mat-label>Create New Agent</mat-label>
         <input matInput />
       </mat-form-field>
       <button mat-raised-button color="primary">GO!</button>
+    </div>
+    <!-- Animated Cube Component -->
+    <div class="bottom-row">
+      <app-cube></app-cube>
     </div>
   </div>
 
