--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -38,11 +38,18 @@
   margin-left: 10px; /* Add some space between the input and button */
 }
 
+.middle-column .agent-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* Space between cards */
+  margin-bottom: 20px; /* Space between cards and cube */
+}
+
 .middle-column .bottom-row {
   width: 100%; /* Ensure the row takes full width */
   display: flex;
   justify-content: center; /* Center items horizontally */
-  // margin-top: auto; /* Push to the bottom */
+  // margin-top: 20px; /* Push to the bottom */
 }
 
 .first-column .first-row,
@@ -84,7 +91,7 @@ button {
 
 .last-column .second-row {
   display: flex;
-  align-items: center;
+  align-items: self-start;
 }
 
 .last-column .second-row mat-form-field {
