added a JSON server

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -83,7 +83,7 @@
     <div class="agent-cards">
       <mat-card *ngFor="let card of agentCards">
         <mat-card-content>
-          {{ card }}
+          {{ card.name }}
         </mat-card-content>
       </mat-card>
     </div>
