--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -125,3 +125,22 @@ button {
   /* Add this line to remove any flex behavior */
   display: block; /* or inline-block depending on your layout needs */
 }
+
+#drawingCanvas {
+  background-color: #f5f5f5; /* Off-white color */
+}
+
+canvas {
+  border: 1px solid black;
+}
+
+.node {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: lightblue;
+  border: 1px solid black;
+  text-align: center;
+  line-height: 50px;
+  cursor: pointer;
+}
