--- a/src/app/agents/agents/agents.component.scss
+++ b/src/app/agents/agents/agents.component.scss
@@ -2,12 +2,13 @@
   display: grid;
   grid-template-columns: 30% 40% 30%;
   grid-template-rows: 20% 80%;
-  height: 100vh;
+
 }
 
 .column {
   padding: 10px;
   border-right: 1px solid rgba(255, 255, 255, 0.1); /* Vertical line between columns */
+  height: 100vh; /* Ensure the column takes full height */
 }
 
 .column:first-child {
@@ -42,8 +43,17 @@
 
 .form-container {
   display: flex;
-  align-items: center;
+  align-items: start;
   width: 100%; /* Ensure the container takes full width */
+}
+
+.search-agents-field {
+  flex: 1;
+}
+
+.container .form-container .go-button {
+  height: 56px;
+  margin-left: 8px;
 }
 
 .full-width {
