--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,5 +1,57 @@
 <div class="container">
-  <div class="column"></div>
-  <div class="column"></div>
-  <div class="column"></div>
+  <div class="column">
+    <div class="row">
+      <div class="input-container">
+        <mat-form-field
+          appearance="outline"
+          class="full-width search-agents-field"
+        >
+          <mat-label>Search Agents</mat-label>
+          <input matInput />
+        </mat-form-field>
+        <button mat-raised-button color="primary" class="go-button">GO!</button>
+      </div>
+    </div>
+    <div class="row">
+      <h2>This is the ETS Agent Market place Dashboard</h2>
+      <span>As a user you can search for agents</span>
+      <ul>
+        <li>Create agents</li>
+        <li>see workflows</li>
+        <li>Create workflows</li>
+      </ul>
+    </div>
+  </div>
+  <div class="column">
+    <div class="row">
+      <div class="input-container middle-input-container">
+        <mat-form-field
+          appearance="outline"
+          class="full-width search-agents-field"
+        >
+          <mat-label>Agent Views</mat-label>
+          <input matInput />
+        </mat-form-field>
+        <button mat-raised-button color="primary" class="go-button">GO!</button>
+      </div>
+    </div>
+    <div class="row"></div>
+  </div>
+  <div class="column">
+    <div class="row">
+      <div class="input-container">
+        <mat-form-field
+          appearance="outline"
+          class="full-width search-agents-field"
+        >
+          <mat-label>Search Workflows</mat-label>
+          <input matInput />
+        </mat-form-field>
+        <button mat-raised-button color="primary" class="go-button">GO!</button>
+      </div>
+    </div>
+    <div class="row">
+      <mat-checkbox class="example-margin">Use Playground</mat-checkbox>
+    </div>
+  </div>
 </div>
