--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -16,7 +16,7 @@
       <h2>This is the ETS Agent Market place Dashboard</h2>
       <span>As a user you can search for agents</span>
       <ul>
-        <li>Create agents</li>
+        <li><a routerLink="/agents" class="no-decoration">Create agents</a></li>
         <li>see workflows</li>
         <li>Create workflows</li>
       </ul>
