--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -59,3 +59,9 @@
   margin-left: 8px;
 }
 
+/* Remove text decoration and set color for links */
+.no-decoration {
+  text-decoration: none;
+  color: inherit;
+}
+
