add agent views feature, including API endpoint and service, and update UI to display agent views

--- a/src/app/components/cube/cube.component.html
+++ b/src/app/components/cube/cube.component.html
@@ -7,4 +7,5 @@
     <div class="face top"></div>
     <div class="face bottom"></div>
   </div>
+  <div class="dynamic-prompt">Dynamic Prompt</div>
 </div>
