--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -65,3 +65,20 @@
   color: inherit;
 }
 
+.card-row {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row; /* Align mat-cards in a row */
+  flex-wrap: wrap; /* Allow mat-cards to wrap to the next line */
+  gap: 10px; /* Add some space between the cards */
+  justify-content: flex-start; /* Align items to the start of the row */
+}
+
+/* Connector arrow styles */
+// .connector {
+//   position: absolute;
+//   width: 100%;
+//   height: 100%;
+//   pointer-events: none; /* Allow clicks to pass through the SVG */
+// }
+
