add connectors view feature, including API service, JSON files

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -41,6 +41,9 @@
           <mat-card-content>{{ agent.text }}</mat-card-content>
         </mat-card>
       </div> -->
+      <!-- <button mat-raised-button color="primary" (click)="saveConnectors()">
+        Create New Agent
+      </button> -->
       <div class="row canvas-container">
         <canvas id="drawingCanvasHome" width="750" height="600"></canvas>
         <app-cube></app-cube>
