--- a/src/app/agents/agents/agents.component.html
+++ b/src/app/agents/agents/agents.component.html
@@ -6,9 +6,9 @@
       </mat-toolbar>
     </div>
     <div class="row">
-      <form [formGroup]="form">
-        <mat-tab-group>
-          <mat-tab label="Chat">
+      <mat-tab-group>
+        <mat-tab label="Chat">
+          <form [formGroup]="form">
             <mat-form-field class="textarea-container">
               <textarea
                 id="chat"
@@ -17,24 +17,46 @@
                 formControlName="chat"
               ></textarea>
             </mat-form-field>
-          </mat-tab>
-          <mat-tab label="General">
-            <mat-form-field class="textarea-container">
-              <textarea id="General" matInput rows="22"></textarea>
-            </mat-form-field>
-          </mat-tab>
-          <mat-tab label="Advanced">
-            <mat-form-field>
-              <textarea matInput rows="22"></textarea>
-            </mat-form-field>
-          </mat-tab>
-          <mat-tab label="Eval & Explainability">
-            <mat-form-field>
-              <textarea matInput rows="22"></textarea>
-            </mat-form-field>
-          </mat-tab>
-        </mat-tab-group>
-      </form>
+          </form>
+        </mat-tab>
+        <mat-tab label="General">
+          <mat-card class="card-container">
+            <mat-card-header>
+              <mat-card-title>
+                <span>Agent Name</span>
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <mat-form-field
+                appearance="outline"
+                color="accent"
+                class="full-width search-agents-field custom-input"
+              >
+                <mat-label
+                  >This will only change the display name of your Agent
+                  Name</mat-label
+                >
+                <input
+                  matInput
+                  [(ngModel)]="newAgentName"
+                  class="input-field"
+                />
+              </mat-form-field>
+            </mat-card-content>
+          </mat-card>
+        </mat-tab>
+        <mat-tab label="Advanced">
+          <mat-form-field>
+            <textarea matInput rows="22"></textarea>
+          </mat-form-field>
+        </mat-tab>
+        <mat-tab label="Eval & Explainability">
+          <mat-form-field>
+            <textarea matInput rows="22"></textarea>
+          </mat-form-field>
+        </mat-tab>
+      </mat-tab-group>
+
       <button
         *ngIf="form.get('chat')?.value"
         (click)="runPrompt()"
