--- a/src/app/agents/agents/agents.component.html
+++ b/src/app/agents/agents/agents.component.html
@@ -44,8 +44,12 @@
               </mat-form-field>
             </mat-card-content>
             <mat-card-actions class="button-group">
-              <button mat-raised-button color="primary">Update Name</button
-              ><button mat-raised-button color="accent">Delete Agent</button>
+              <button mat-raised-button color="primary" (click)="updateName()">
+                Update Name
+              </button>
+              <button mat-raised-button color="accent" (click)="deleteAgent()">
+                Delete Agent
+              </button>
             </mat-card-actions>
           </mat-card>
         </mat-tab>
