--- a/src/app/agents/agents/agents.component.html
+++ b/src/app/agents/agents/agents.component.html
@@ -6,7 +6,7 @@
       </mat-toolbar>
     </div>
     <div class="row">
-      <mat-tab-group>
+      <mat-tab-group [selectedIndex]="2">
         <mat-tab label="Chat">
           <form [formGroup]="form">
             <mat-form-field class="textarea-container">
@@ -55,7 +55,28 @@
         </mat-tab>
         <mat-tab label="Advanced">
           <mat-form-field>
-            <textarea matInput rows="22"></textarea>
+            <mat-card class="card-container">
+              <mat-card-header>
+                <mat-card-title>
+                  <span>My Documents</span>
+                </mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                <mat-form-field
+                  appearance="outline"
+                  color="accent"
+                  class="full-width search-agents-field custom-input"
+                >
+                  <mat-label> Search for document </mat-label>
+                  <mat-icon matPrefix class="search-icon"
+                    ><span class="material-symbols-outlined">
+                      search
+                    </span></mat-icon
+                  >
+                  <input matInput class="input-field" />
+                </mat-form-field>
+              </mat-card-content>
+            </mat-card>
           </mat-form-field>
         </mat-tab>
         <mat-tab label="Eval & Explainability">
