--- a/src/app/agents/agents/agents.component.html
+++ b/src/app/agents/agents/agents.component.html
@@ -54,51 +54,56 @@
           </mat-card>
         </mat-tab>
         <mat-tab label="Advanced">
-          <mat-form-field>
-            <mat-card class="card-container">
-              <mat-card-header>
-                <mat-card-title>
-                  <span>My Documents</span>
-                </mat-card-title>
-              </mat-card-header>
-              <mat-card-content>
-                <mat-form-field
-                  appearance="outline"
-                  color="accent"
-                  class="full-width search-agents-field custom-input"
-                >
-                  <mat-label> Search for document </mat-label>
-                  <mat-icon matPrefix class="search-icon"
-                    ><span class="material-symbols-outlined">
-                      search
-                    </span></mat-icon
-                  >
-                  <input matInput class="input-field" />
-                </mat-form-field>
-              </mat-card-content>
-              <mat-card-actions class="button-group">
-                <label
-                  for="fileInput"
-                  class="mat-raised-button mat-primary custom-black-button"
-                >
-                  Select File
-                </label>
-                <input
-                  type="file"
-                  id="fileInput"
-                  (change)="onFileSelected($event)"
-                  style="display: none"
-                />
-                <button
-                  mat-raised-button
-                  color="primary"
-                  (click)="uploadFile()"
-                >
-                  Upload File
-                </button>
-              </mat-card-actions>
-            </mat-card>
-          </mat-form-field>
+          <mat-card class="card-container">
+            <mat-card-header>
+              <mat-card-title>
+                <span>My Documents</span>
+              </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <mat-form-field
+                appearance="outline"
+                color="accent"
+                class="full-width search-agents-field custom-input"
+              >
+                <mat-label>Search for document</mat-label>
+                <mat-icon matPrefix class="search-icon">
+                  <span class="material-symbols-outlined">search</span>
+                </mat-icon>
+                <input matInput class="input-field" />
+              </mat-form-field>
+              <mat-form-field
+                appearance="outline"
+                color="accent"
+                class="full-width custom-input"
+              >
+                <mat-label>File Name</mat-label>
+                <input matInput [(ngModel)]="fileName" class="input-field" />
+              </mat-form-field>
+            </mat-card-content>
+            <mat-card-actions class="button-group">
+              <label
+                for="fileInput"
+                class="mat-raised-button custom-black-button"
+              >
+                Select File
+              </label>
+              <input
+                type="file"
+                id="fileInput"
+                (change)="onFileSelected($event)"
+                style="display: none"
+              />
+              <button
+                mat-raised-button
+                class="custom-black-button"
+                (click)="uploadFile()"
+                [disabled]="!fileName || selectedFiles.length === 0"
+              >
+                Upload File
+              </button>
+            </mat-card-actions>
+          </mat-card>
         </mat-tab>
         <mat-tab label="Eval & Explainability">
           <mat-form-field>
